kubernetes/oracle-k3s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: taskflow
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  sessionAffinity: None
