kubernetes/oracle-k3s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: taskflow
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
